--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     // FirebaseUI (for authentication)
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
