--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,7 @@
             </intent-filter>
 
         </activity>
+        <activity android:name=".PhotoViewActivity" />
 
 
     </application>
